# brainfuck

./: .gitignore  interpreter.c  meson.build  test.py
.github/workflows/: build.yml
